# Reitinhaku

./: .coveragerc  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteusdokumentti.md  tuntikirjanpito.md
dokumentaatio/viikkoraportit/: viikko1.md  viikko2.md  viikko3.md  viikko4.md  viikko5.md  viikko6.md
reitinhaku/: filereader.py  main.py
reitinhaku/algorithms/: dijkstra.py  jps.py
reitinhaku/tests/: algorithms_test.py  dijkstra_test.py  performance_tests.py  run_scen_tests.py
reitinhaku/ui/: ui.py
reitinhaku/utils/: filereader.py
